@@ -1,1 +1,3 @@
 SUBDIRS=src
+
+ACLOCAL_AMFLAGS = -I m4
