@@ -6,7 +6,8 @@ server - GPLv3 - The RainbruRPG's server binary.
    (10 items by revision)
 
 * v0.0.0-0 (14 feb 2012 - ???) FT ??:?? SLOC ???
-- (5) server_ctl starts to implement command map
+- (6) server_ctl correctly handles auto completion
+- server_ctl starts to implement command map
 - Create a basic asynchronous TCP server waiting for connections
 - Correctly customize logger
 - Now uses logger
