@@ -1,7 +1,7 @@
 /* 
  * server - The RainbruRPG's server binary.
  *
- * Copyright (C) 2011-2012 Jérôme Pasquier
+ * Copyright (C) 2011-2012, 2014 Jérôme Pasquier
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
