@@ -1,25 +1,29 @@
-// simple_rl.cpp
-#include <cstdio>
-#include <cstdlib>
-#include <string>
-#include <map>
-#include <iostream>
- 
-#include <readline/readline.h>
-#include <readline/history.h>
- 
-#ifdef HAVE_CONFIG_H
-#  include <config.h> // USES PACKAGE_VERSION
-#endif
+/* 
+ * server - The RainbruRPG's server binary.
+ *
+ * Copyright (C) 2011-2012, 2014 Jérôme Pasquier
+ *
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ *
+ */
 
+#include "CommandLine.hpp"
 #include "ServerCommand.hpp"
 
+#include <iostream>
+
 using namespace std;
-
-/* Auto completion mainly from 
-   http://cc.byexamples.com/2008/06/16/gnu-readline-implement-custom-auto-complete/
-*/
-
 
 class scDummy: public ServerCommand
 {
@@ -32,108 +36,21 @@ public:
   }
 };
 
-typedef map<string,ServerCommand*> tCommandMap;
-
-static char** my_completion(const char*, int ,int);
-static tCommandMap commandMap;
-
-char* cmd [] ={ "start", "stop", "list", "help", "quit", " " };
-char* my_generator(const char*,int);
-char * dupstr (char*);
-void *xmalloc (int);
 
 int main()
 {
-  // Testing map
-  scDummy* sd = new scDummy("dummy");
-  commandMap["dummy"] =  sd;
+  scDummy sd("dummy"); // A simple dummy command
 
+  // The readline-based command line
+  CommandLine cl;
+  cl.prompt();
+  cl.addCommand("dummy", &sd);
 
-  printf("Welcome to rainbrurpg-server-ctl v%s\n", PACKAGE_VERSION);
-  printf("Use `help' to get a list of working commands.");
-
-  char *buf;
- 
-  rl_attempted_completion_function = my_completion;
-
-  while((buf = readline("\n > "))!=NULL)
+  while (cl.getNext())
     {
-      if (strcmp(buf,"quit")==0)
-	break;
- 
-      // Execute commands from the command map
-      string strcmd = buf;
-      tCommandMap::iterator it = commandMap.find (strcmd);
-      if (it != commandMap.end())
-	{
-	  it->second->execute(strcmd);
-	}
-
-      printf("[%s]\n",buf);
-      
-      if (buf[0]!=0)
-	add_history(buf);
+    // Does nothing
     }
-  
-  free(buf);
   
   return 0;
 }
 
-static char** my_completion( const char * text , int start,  int end)
-{
-    char **matches;
- 
-    matches = (char **)NULL;
- 
-    if (start == 0)
-      matches = rl_completion_matches (const_cast<char*>(text), &my_generator);
-    else
-        rl_bind_key('\t',rl_abort);
- 
-    return (matches);
- 
-}
-
-char* my_generator(const char* text, int state)
-{
-    static int list_index, len;
-    char *name;
- 
-    if (!state) {
-        list_index = 0;
-        len = strlen (text);
-    }
- 
-    while (name = cmd[list_index]) {
-        list_index++;
- 
-        if (strncmp (name, text, len) == 0)
-            return (dupstr(name));
-    }
- 
-    /* If no names matched, then return NULL. */
-    return ((char *)NULL);
- 
-}
-
-char * dupstr (char* s) {
-  char *r;
- 
-  r = (char*) xmalloc ((strlen (s) + 1));
-  strcpy (r, s);
-  return (r);
-}
- 
-void * xmalloc (int size)
-{
-    void *buf;
- 
-    buf = malloc (size);
-    if (!buf) {
-        fprintf (stderr, "Error: Out of memory. Exiting.'n");
-        exit (1);
-    }
- 
-    return buf;
-}
